+commented out overflow: hidden as it was causing issues with scroll

--- a/frontend/app/styles/global.scss
+++ b/frontend/app/styles/global.scss
@@ -7,7 +7,7 @@ body {
   padding: 0;
   margin: 0;
   max-width: 100vw;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 h1 {
